[tool.poetry]
name = "put-sell"
version = "0.1.0"
description = ""
authors = ["Benjamin Ye <benjamin.ye@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
yfinance = "^0.1.55"
hmmlearn = "^0.2.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
